--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h2>Create New Listing</h2>
-    <form action="{% url 'create_listing' %}", method="POST">
+    <form action="{% url 'create_listing' %}" method="POST">
         {% csrf_token %}
         <div class="form-group mb-3">
             <label for="id_title">{{ form.title.label }}:</label>
@@ -23,7 +23,11 @@
         <div class="form-group mb-3">
             <label for="id_photo">{{ form.photo.label }}:</label>
             {{ form.photo }}
-        </div>
+        </div> 
+        {% comment %} <div class="form-group mb-3">
+            <label for="id_date_created">{{ form.date_created.label }}:</label>
+            {{ form.date_created }}
+        </div> {% endcomment %}
         <input class="btn btn-primary" type="submit" value="Create Listing">
     </form>
 {% endblock %}
