--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -2,8 +2,8 @@ body {
     padding: 10px;
 }
 
-.active-listing{
-    border: 1px solid rgb(147, 144, 144);
-    margin: 10px;
+.select-category{
+    /* border: 1px dashed red; */
+    margin-left: 1.5rem;
+    margin-bottom: 1.5rem;
 }
-
