--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,17 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>      
+    <h2>Active Listings</h2> 
+    <div class="select-category">
+        <form action="{% url 'show_category' %}" class="form-horizontal" method="POST">
+            {% csrf_token %}
+            <div class="col-sm-2">
+                <label for="id_category">Filter by Category:</label>
+                {{ form.category }}
+                <button type="submit">Select</button>
+            </div>
+        </form>     
+    </div>  
     <div class="row mx-4">
         {% for listing in listings %}
             <div class="card mx-3" style="width: 18rem;">
@@ -10,10 +20,12 @@
                     <h3 class="card-title">{{ listing.name }}</h3>
                     <span class="card-text">${{ listing.price }}</span>
                     <p>{{ listing.description }}</p>
-                    <p> {{ listing.category }}</p>
-                    <a href="" class="btn btn-primary">View Listing</a>
+                    <p> {{ listing.get_category_display }}</p>
+                    <a href="{% url 'show_listing' id=listing.id %}" class="btn btn-primary">Details</a>
                 </div>
             </div>
         {% endfor %}
     </div>
-{% endblock %}
+{% endblock %} 
+
+
