added individual listing page and watchlist functionality

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -7,3 +7,9 @@ body {
     margin-left: 1.5rem;
     margin-bottom: 1.5rem;
 }
+
+.listing-details{
+    display: block;
+    width: 90vw;
+    border: 1px dashed red;
+}
