--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,6 +1,29 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>      
-    
+<div class="row">
+    {% if request.user in listing.watchlist.all %}
+    <form action="{% url 'remove_watchlist' id=listing.id %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-warning">Remove from Watchlist</button>
+    </form>
+    {% else %}
+    <form action="{% url 'add_watchlist' id=listing.id %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary">Add to Watchlist</button>
+    </form>
+    {% endif %}
+</div>
+
+<div class="listing-details">
+    <h2>Listing: {{ listing.name }} </h2>
+    <span>Sold By: {{ listing.owner }} </span>
+    <img class="listing-img" src="{{ listing.photo }}" alt="{{ listing.name }}" height="400px"/>
+    <span>${{ listing.price}} </span>
+    <p>{{ listing.description }}</p>
+    <span>Category: {{ listing.get_category_display }}</span>
+    <span> {{ listing.bids }} bid(s) so far. </span>
+    <input type="text"></input>
+    <a href="" class="btn btn-primary">Place Bid</a>
+</div>    
 {% endblock %}
