--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -23,7 +23,26 @@
     <p>{{ listing.description }}</p>
     <span>Category: {{ listing.get_category_display }}</span>
     <span> {{ listing.bids }} bid(s) so far. </span>
-    <input type="text"></input>
+    <div class="form-group">
+    <input type="text">
     <a href="" class="btn btn-primary">Place Bid</a>
+    </div>
 </div>    
+
+<div>
+    <h3>Comments</h3>
+    {% if user.is_authenticated %}
+        <form action="{% url 'add_comment' id=listing.id %}" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <input type="text" name="comment" placeholder="Add new comment"/>           
+                <button type="submit" class="btn btn-primary">Save Comment</button>
+            </div>
+        </form>
+    {% endif %}
+        <ul class="list-grouo">
+    {% for comment in comments %}
+            <li class="list-group-item">{{ comment.user }}: {{ comment.comment }}</li>
+    {% endfor %}   
+</div>
 {% endblock %}
