--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -2,6 +2,29 @@
 
 {% block body %}
     <h2>Create New Listing</h2>
+    {% comment %} <form action="{% url 'create_listing' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="Title">Title</label>
+            <input type="text" name="title" class="form-control" id="title" placeholder="Title">
+        </div>
+        <div class="form-group">
+            <label for="title">Description</label>
+            <input type="text" name="description" class="form-control" id="description" placeholder="Product Description" rows=10>
+        </div>
+        <div class="form-group">
+            <label for="Image URL">Upload Image</label>
+            <input type="text" name="title" class="form-control" id="Image URL" placeholder="Image Url">
+        </div>
+        <div class="form-group">
+            <label for="Category">Category</label>
+            <input type="text" name="title" class="form-control" id="title" placeholder="Title">
+        </div>
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" name="title" class="form-control" id="title" placeholder="Title">
+        </div>
+    </form> {% endcomment %}
     <form action="{% url 'create_listing' %}" method="POST">
         {% csrf_token %}
         <div class="form-group mb-3">
@@ -25,5 +48,5 @@
             {{ form.photo }}
         </div> 
         <input class="btn btn-primary" type="submit" value="Create Listing">
-    </form>
+    </form> 
 {% endblock %}
