--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,16 +2,17 @@
 
 {% block body %}
     <h2>Active Listings</h2> 
-    <div class="select-category">
-        <form action="{% url 'show_category' %}" class="form-horizontal" method="POST">
+    <div class="form-wrapper mb-3" style="max-width: 33%;">
+        <form action="{% url 'show_category' %}" method="POST" class="form-inline">
             {% csrf_token %}
-            <div class="col-sm-2">
-                <label for="id_category">Filter by Category:</label>
-                {{ form.category }}
-                <button type="submit">Select</button>
+            <div class="form-group ml-3">
+                <label for="id_category">Filter by Category: </label>
+                {{ form.category }}               
+                <button type="submit" class="btn btn-primary ml-1">Select</button>
             </div>
-        </form>     
-    </div>  
+        </form>
+    </div>   
+
     <div class="row mx-4">
         {% for listing in listings %}
             <div class="card mx-3" style="width: 18rem;">
@@ -19,7 +20,7 @@
                 <div class="card-body">
                     <h3 class="card-title">{{ listing.name }}</h3>
                     <span class="card-text">${{ listing.price }}</span>
-                    <p>{{ listing.description }}</p>
+                    <p class="mt-3">{{ listing.description }}</p>
                     <p> {{ listing.get_category_display }}</p>
                     <a href="{% url 'listing' id=listing.id %}" class="btn btn-primary">Details</a>
                 </div>
