--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -11,40 +11,41 @@
         {% if owner %}
         <form action="{% url 'close_auction' id=listing.id %}" method="POST">
             {% csrf_token %}
-            <button type="submit" class="btn btn-warning">Close Auction</button>
+            <button type="submit" class="btn btn-warning ml-3">Close Auction</button>
         </form>
         {% endif %}
         {% if request.user in listing.watchlist.all %}
         <form action="{% url 'remove_watchlist' id=listing.id %}" method="POST">
             {% csrf_token %}
-            <button type="submit" class="btn btn-warning">Remove from Watchlist</button>
+            <button type="submit" class="btn btn-warning ml-3">Remove from Watchlist</button>
         </form>
         {% else %}
         <form action="{% url 'add_watchlist' id=listing.id %}" method="POST">
             {% csrf_token %}
-            <button type="submit" class="btn btn-primary">Add to Watchlist</button>
+            <button type="submit" class="btn btn-primary ml-3">Add to Watchlist</button>
         </form>
         {% endif %}
     {% endif %}
 </div>
 
-<div class="listing-details">
+<div class="container-fluid">
     <h2>Listing: {{ listing.name }} </h2>
     <span>Sold By: {{ listing.owner }} </span>
+    <br>
     <img class="listing-img" src="{{ listing.photo }}" alt="{{ listing.name }}" height="400px"/>
+    <br>
     <span>Current Price: ${{ listing.price}} </span>
     <p>{{ listing.description }}</p>
     <span>Category: {{ listing.get_category_display }}</span>
-    <div class="container">
-    {% if user.is_authenticated %}
-        <form action="{% url 'place_bid' id=listing.id %}" method="POST">
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="text" name="bid" min="0" placeholder="Bid"/>           
-                <button type="submit" class="btn btn-primary">Place Bid</button>
-            </div>
-        </form>
-    {% endif %}
+        {% if user.is_authenticated %}
+            <form action="{% url 'place_bid' id=listing.id %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <input type="text" name="bid" min="0" placeholder="Bid"/>           
+                    <button type="submit" class="btn btn-primary">Place Bid</button>
+                </div>
+            </form>
+        {% endif %}
         {% if message %}
             {% if update %}
             <div class="alert alert-success" role="alert">
@@ -60,12 +61,8 @@
             <div class="alert alert-success" role="alert">
                 <span>Congratulations! You have one this auction!</span>
             </div>
-        {% endif %}
-        
-    </div>
-</div>    
-
-<div>
+        {% endif %}       
+ 
     <h3>Comments</h3>
     {% if user.is_authenticated %}
         <form action="{% url 'add_comment' id=listing.id %}" method="POST">
