fixed typo in alert message

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -59,7 +59,7 @@
         {% endif %}
         {% if not listing.is_active and user == listing.price.user %}
             <div class="alert alert-success" role="alert">
-                <span>Congratulations! You have one this auction!</span>
+                <span>Congratulations! You have won this auction!</span>
             </div>
         {% endif %}       
  
